--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,7 @@ go.work.sum
 # env file
 .env
 
-audios/chill-vibes
-audios/energize
-audios/focus-flow
-audios/lo-fi-lounge
+audios/*
 
 .idea
 .vscode
